# primitives

./: .gitignore  CITATION.cff  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: workflow.yml
python/pmtvs/: __init__.py  _config.py  config.py
python/pmtvs/dynamical/: ftle.py  lyapunov.py  saddle.py
python/pmtvs/embedding/: delay.py
python/pmtvs/individual/: complexity.py  correlation.py  dynamics.py  entropy.py  fractal.py  geometry.py  hilbert.py  information.py  memory.py  spectral.py  stationarity.py  statistics.py  temporal.py
python/pmtvs/information/: entropy.py  (+2 more)
python/primitives/: __init__.py  _config.py  complexity.py  config.py  dynamics.py  embedding.py
python/prmtvs/: __init__.py  _config.py  config.py
src/: lib.rs
src/complexity/: entropy.rs  hurst.rs  mod.rs
src/dynamics/: ftle.rs  lyapunov.rs  mod.rs
src/embedding/: delay.rs
tests/: test_graph_laplacian_spectrum.py  test_hilbert_envelope.py  test_hurst.py  test_lyapunov.py  test_optimal_delay.py  test_permutation_entropy.py  test_rust_python_parity.py  test_sample_entropy.py
validation/: README.md  conftest.py  test_acf.py  test_acf_half_life.py  test_adf.py  test_arch.py  test_continuity.py  test_determinism.py  test_eigendecomposition.py  test_granger.py  test_graph_laplacian_spectrum.py  test_hilbert_envelope.py  test_hurst.py  test_kurtosis.py  test_lyapunov.py  test_optimal_delay.py  test_permutation_entropy.py  test_sample_entropy.py  test_spectral.py  test_spectral_profile.py  test_turning_point_ratio.py
(+91 files in other folders)
