[package]
name = "pmtvs"
version = "0.1.0"
edition = "2021"

[lib]
name = "pmtvs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
numpy = "0.27"

# Ready for Tier 2+ Rust ports (uncomment as needed):
# ndarray = "0.16"
# ndarray-linalg = "0.16"
# ndarray-stats = "0.6"
# rustfft = "6.2"
# rayon = "1.10"
# num-complex = "0.4"
# statrs = "0.17"
# kiddo = "4.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
