[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "primitives"
version = "0.1.0"
description = "Rust-accelerated primitives for signal analysis"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "scipy>=1.7.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "primitives._rust"
